fix: Ignore ID literals for individual input parameters (#19721)
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>